# forecaster

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Readme.md  Specifications_Techniques_SGE.docx  alembic.ini  docker-compose.yml  prompt.md  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_site_id_to_modeles_versions.py  0002_trajectoires_optimisees_date_generation_forecasts.py  0003_add_grid_bess_params_to_sites.py
docker/: docker-compose.yml
docker/models_data/consumption/: 20260413_121402.joblib  20260417_073953.joblib
docker/models_data/pv_production/: 20260417_074006.joblib
grafana/dashboards/: forecasts_conso.json  forecasts_prix_spot.json  forecasts_pv.json  ppc_bess_pv_trajectoire.json  trajectoires_bess.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: postgres.yml
scripts/: init_demo.py  run_all_jobs.py
src/forecaster/: __init__.py  config.py  exceptions.py  main.py
src/forecaster/db/: models.py  readers.py  session.py  writers.py
src/forecaster/fetchers/: openmeteo.py  rte.py
src/forecaster/pipeline/: forecast.py  monitoring.py  training.py
src/forecaster/predictors/: base.py  consumption.py  pv_production.py
tests/: conftest.py
tests/fixtures/: generate_load_data.py  load_history_2025.csv
tests/pipeline/: test_forecast.py  test_monitoring.py  test_training.py
tests/test_fetchers/: test_openmeteo.py  test_rte.py
tests/test_predictors/: test_consumption_model.py  test_models.py  test_pv_production_model.py
(+9 files in other folders)
