[project]
name = "forecaster"
version = "0.1.0"
description = "L1 — Service de Prévision SGE (Tewa Solar)"
requires-python = ">=3.11"
dependencies = [
    # ML
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    # DB
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    # Scheduling
    "apscheduler>=3.10",
    # HTTP
    "httpx>=0.27",
    # Config
    "pydantic-settings>=2.2",
    # Model serialization
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
forecaster = "forecaster.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forecaster"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/forecaster --cov-report=term-missing"
